# qwe

./: CMakeLists.txt  compile_commands.json  main.cpp  main_old.cpp
cpu/: cpu.hpp  process_cpu_linux.cpp  process_cpu_linux.hpp
display/: display.cpp  display.hpp  memory_format.cpp  memory_format.hpp
memory/: memory.cpp  memory.hpp  memory_format.cpp  process_memory_linux.cpp  process_memory_linux.hpp
system/: cpu.cpp  cpu.hpp  memory.cpp  memory.hpp
utils/: bsd.cpp  get_childs.cpp  get_childs.hpp  linux.cpp  memory.hpp  process.cpp  process.hpp
